--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- le menu de navigation -->
   <nav>
     <ul class="barre-de-menu">
+      <li><img src="./images/logo_galerapagos.png" alt="logo galerapagos"></li>
       <li><a href="index.html" class="actuel">Accueil</a></li>
       <li><a href="etude.html">Présentation de l'étude</a></li>
       <li><a href="deroulement.html">Déroulement du projet</a></li>
@@ -20,25 +21,18 @@
     </ul>
   </nav>
 
+
+  <img id="galerapagos" src="./images/gelerapagos.jpg" alt="galerapagos">
   <h1>Projet Jeu coll'</h1>
   <div>
     <h2>Présentation du projet</h2>
     <h3>Contexte</h3>
     <p>
-      ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-      de
-      amicitia.
-      Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-      (sic
-      enim est
-      habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-      loqui ipsum
-      putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-      Laelius,
-      cuius tota
-      disputatio est de amicitia, quam legens te ipse cognosces.
+      De nos jours, les intelligences artificielles prennent de plus en plus de place dans la société. Mais, pouvons-nous leur faire confiance ? Notre projet s’inscrit dans la continuité d’une étude scientifique menée par le Laboratoire de l’Intégration du Matériau au Système. 
+      Cette étude vise à comprendre comment la confiance d’un humain varie en fonction des performances d’une intelligence artificielle. Pour cela, nos clients ont construit une expérience basée sur un jeu collaboratif nommé “Galèrapagos”. 
+      
     </p>
-    <h3>Objectif du projet</h3>
+    <h3>Le projet :</h3>
     <p>
       ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
       de
