--- a/conclusion.html
+++ b/conclusion.html
@@ -11,6 +11,7 @@
 <body>
     <nav>
         <ul class="barre-de-menu">
+            <li><img src="./images/logo_galerapagos.png" alt="logo galerapagos"></li>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="etude.html">Présentation de l'étude</a></li>
             <li><a href="deroulement.html">Déroulement du projet</a></li>
@@ -20,131 +21,144 @@
         </ul>
     </nav>
 
+    <div id="contenu">
+        <h1>Conclusion</h1>
+        <div>
+            <h2>Bilan du projet</h2>
+            <p>
+                Bilan général du projet. ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus
+                scripsi
+                de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
 
-    <h1>Conclusion</h1>
-    <div>
-        <h2>Bilan du projet</h2>
-        <p>
-            Bilan général du projet. ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-            de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
+            <h3>Adrien</h3>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
 
-        <h3>Adrien</h3>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
+            <h3>Théo</h3>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
 
-        <h3>Théo</h3>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
+            <h3>Eudes</h3>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
+        </div>
 
-        <h3>Eudes</h3>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
+        <div>
+            <h2>Acquis pédagogiques</h2>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
+        </div>
+
+        <div>
+            <h2>Plan vert</h2>
+            <p>
+                La loi Grenelle 1 (dans son article 55 du 3 août 2009) impose à tous les établissements d’enseignement
+                supérieur de mettre en place une démarche Développement Durable, sous la dénomination « Plan Vert ».
+                Notre projet s’inscrit bien dans la démarche de ce plan puisqu’il soutient les différents points du
+                développement durable.
+            </p>
+            <h3>Apport sociétal</h3>
+            <p>
+                La loi Grenelle 1 (dans son article 55 du 3 août 2009) impose à tous les établissements d’enseignement
+                supérieur de mettre en place une démarche Développement Durable, sous la dénomination « Plan Vert ».
+                Notre projet s’inscrit bien dans la démarche de ce plan puisqu’il soutient les différents points du
+                développement durable.
+            </p>
+            <h3>Apport écologique</h3>
+            <p>
+                Durant toute la durée du projet, nous avons accordé une importance particulière à la gestion
+                des équipements et du matériel à notre disposition. En ce qui concerne les ordinateurs que nous avons
+                utilisés pour mener à bien nos
+                expériences, nous avons été attentifs à la consommation énergétique, veillant à ce que les machines ne
+                restent en marche que le temps nécessaire afin d'optimiser l'économie d'électricité. Cette approche
+                éco-responsable s'est également traduite par notre préférence pour les documents numériques, dans le but
+                de réduire au maximum notre empreinte écologique en limitant l'impression sur papier. En somme, notre
+                démarche s'est inscrite dans une volonté de concilier efficacité opérationnelle et respect de
+                l'environnement, reflétant ainsi notre engagement envers une gestion responsable des ressources.
+            </p>
+
+        </div>
+
     </div>
 
-    <div>
-        <h2>Acquis pédagogiques</h2>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
-    </div>
-
-    <div>
-        <h2>Plan vert</h2>
-        <h3>Apport sociétal</h3>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
-        <h3>Apport écologique</h3>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
-
-    </div>
 
     <footer>
         <div class="footerContainer">
