--- a/deroulement.html
+++ b/deroulement.html
@@ -13,6 +13,7 @@
     <!-- le menu de navigation -->
     <nav>
         <ul class="barre-de-menu">
+            <li><img src="./images/logo_galerapagos.png" alt="logo galerapagos"></li>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="etude.html">Présentation de l'étude</a></li>
             <li><a href="deroulement.html" class="actuel">Déroulement du projet</a></li>
@@ -22,79 +23,91 @@
         </ul>
     </nav>
 
-    <h1>Déroulement du projet</h1>
+    <div id="contenu">
+        <h1>Déroulement du projet</h1>
 
-    <div>
-        <h2>Début du projet</h2>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-            de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
+        <div>
+            <h2>Début du projet</h2>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
+                de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
+        </div>
+
+        <div>
+            <h2>Préparation de l'expérience</h2>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
+                de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
+        </div>
+
+        <div>
+            <h2>Passation de l'expérience</h2>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
+                de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
+        </div>
+
+        <div>
+            <h2>Fin du projet</h2>
+            <p>
+                ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
+                de
+                amicitia.
+                Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et
+                sapiens
+                (sic
+                enim est
+                habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas,
+                Laelium
+                loqui ipsum
+                putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+                Laelius,
+                cuius tota
+                disputatio est de amicitia, quam legens te ipse cognosces.
+            </p>
+        </div>
     </div>
 
-    <div>
-        <h2>Préparation de l'expérience</h2>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-            de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
-    </div>
 
-    <div>
-        <h2>Passation de l'expérience</h2>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-            de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
-    </div>
-
-    <div>
-        <h2>Fin du projet</h2>
-        <p>
-            ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-            de
-            amicitia.
-            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-            (sic
-            enim est
-            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-            loqui ipsum
-            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-            Laelius,
-            cuius tota
-            disputatio est de amicitia, quam legens te ipse cognosces.
-        </p>
-    </div>
 
     <footer>
         <div class="footerContainer">
