--- a/gdp.html
+++ b/gdp.html
@@ -11,6 +11,7 @@
   <!-- le menu de navigation -->
   <nav>
     <ul class="barre-de-menu">
+      <li><img src="./images/logo_galerapagos.png" alt="logo galerapagos"></li>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="etude.html">Présentation de l'étude</a></li>
       <li><a href="deroulement.html">Déroulement du projet</a></li>
@@ -20,35 +21,10 @@
     </ul>
   </nav>
 
-
-  <h1>Gestion de projet</h1>
-  <div>
-    <h2>Organisation</h2>
-    <p>
-      ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-      de
-      amicitia.
-      Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-      (sic
-      enim est
-      habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-      loqui ipsum
-      putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-      Laelius,
-      cuius tota
-      disputatio est de amicitia, quam legens te ipse cognosces.
-    </p>
-  </div>
-
-  <div>
-    <h2>Planning</h3>
-      <p>
-        mettre notre échéancier ici
-      </p>
-  </div>
-
-  <div>
-    <h2>Communication</h3>
+  <div id="contenu">
+    <h1>Gestion de projet</h1>
+    <div>
+      <h2>Organisation</h2>
       <p>
         ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
         de
@@ -63,14 +39,42 @@
         cuius tota
         disputatio est de amicitia, quam legens te ipse cognosces.
       </p>
+    </div>
+
+    <div>
+      <h2>Planning</h3>
+        <p>
+          mettre notre échéancier ici
+        </p>
+    </div>
+
+    <div>
+      <h2>Communication</h3>
+        <p>
+          ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
+          de
+          amicitia.
+          Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
+          (sic
+          enim est
+          habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
+          loqui ipsum
+          putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+          Laelius,
+          cuius tota
+          disputatio est de amicitia, quam legens te ipse cognosces.
+        </p>
+    </div>
+
+    <div>
+      <h2>Matrice des risques</h3>
+        <p>
+          matrice des risques ici
+        </p>
+    </div>
+
   </div>
 
-  <div>
-    <h2>Matrice des risques</h3>
-      <p>
-        matrice des risques ici
-      </p>
-  </div>
 
   <footer>
     <div class="footerContainer">
