--- a/index.html
+++ b/index.html
@@ -21,41 +21,71 @@
     </ul>
   </nav>
 
-
-  <img id="galerapagos" src="./images/gelerapagos.jpg" alt="galerapagos">
   <h1>Projet Jeu coll'</h1>
-  <div>
-    <h2>Présentation du projet</h2>
-    <h3>Contexte</h3>
-    <p>
-      De nos jours, les intelligences artificielles prennent de plus en plus de place dans la société. Mais, pouvons-nous leur faire confiance ? Notre projet s’inscrit dans la continuité d’une étude scientifique menée par le Laboratoire de l’Intégration du Matériau au Système. 
-      Cette étude vise à comprendre comment la confiance d’un humain varie en fonction des performances d’une intelligence artificielle. Pour cela, nos clients ont construit une expérience basée sur un jeu collaboratif nommé “Galèrapagos”. 
-      
-    </p>
-    <h3>Le projet :</h3>
-    <p>
-      ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi
-      de
-      amicitia.
-      Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-      (sic
-      enim est
-      habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-      loqui ipsum
-      putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-      Laelius,
-      cuius tota
-      disputatio est de amicitia, quam legens te ipse cognosces.
-    </p>
+  <div id="banniere">
+    <img id="galerapagos" src="./images/logo_galerapagos.png" alt="galerapagos">
   </div>
 
-  <div>
-    <h2>Notre équipe</h2>
-    <h3>Nos tuteurs</h3>
-    <p>Petite photo ou ?</p>
-    <h3>Nous</h3>
-    <p>Petite photo ou ?</p>
+
+  <div id="contenu">
+    <div>
+      <h2>Présentation du projet</h2>
+      <h3>Contexte</h3>
+      <p>
+        De nos jours, les intelligences artificielles prennent de plus en plus de place dans la société. Mais,
+        pouvons-nous leur faire confiance ? Notre projet s’inscrit dans la continuité d’une étude scientifique menée par
+        le Laboratoire de l’Intégration du Matériau au Système.
+        Cette étude vise à comprendre comment la confiance d’un humain varie en fonction des performances d’une
+        intelligence artificielle. Pour cela, nos clients ont construit une expérience basée sur un jeu collaboratif
+        nommé “Galèrapagos”.
+      </p>
+      <h3>Le projet </h3>
+      <p>
+        Le client fait appel à nous pour continuer la phase d’expérimentations. En effet, nous allons devoir compléter
+        le panel d’expérimentation afin d’obtenir un nombre satisfaisant de 15 participants. Ainsi, nous devons réaliser
+        de nouvelles expériences sur le modèle de celles déjà réalisées par d’autres chercheurs sur le thème de la
+        confiance entre les hommes et l’intelligence artificielle. Il est donc attendu de notre part de
+        respecter le protocole expérimental mis en place le passé de très près, d’analyser et d’interpréter les nouveaux
+        résultats.
+
+      </p>
+    </div>
+
+    <h3>Objectifs </h3>
+    <p>
+      Nous avons pour objectif principal de réaliser à terme un rapport scientifique dans lequel figureront les
+      résultats ainsi que les interprétations des expériences. Nous pourrons considérer notre contrat comme rempli
+      lorsque nous aurons réalisé un rapport exhaustif des expériences, leurs résultats ainsi que les différentes
+      interprétations menant potentiellement à de nouveaux avancements dans l’étude générale de la collaboration entre
+      l’humain et l’Intelligence Artificielle.
+
+    </p>
+
+
+    <div>
+      <h2>Notre équipe</h2>
+      <h3 id="photo">Nos tuteurs</h3>
+      <p>
+        Nos tuteurs travaillent dans le domaine de la cognitique et de l’ingénierie humaine au sein du
+        laboratoire IMS.
+      </p>
+      <div id="tuteur">
+        <img src="./images/UNREIN.JPG" alt="Hélène Unrein">
+        <img src="./images/LETOUZE.png" alt="Théodore Letouze">
+      </div>
+
+      <h3 id="photo">Nous</h3>
+      <div id="nous">
+        <img src="./images/DELAYE.JPG" alt="Adrien Delaye">
+        <img src="./images/LEREUIL.JPG" alt="Théo Lereuil">
+        <img src="./images/PEYROUNY.JPG" alt="Eudes Peyrouny Mazeau">
+      </div>
+      <p>Nous sommes trois étudiants de première année de l’ENSC qui sommes motivés par le fait de travailler dans le
+        milieu de la recherche en
+        faisant passer des expériences scientifiques qui utilisaient le jeu Galèrapagos. </p>
+    </div>
   </div>
+
 
   <footer>
     <div class="footerContainer">
