--- a/livrable.html
+++ b/livrable.html
@@ -12,6 +12,7 @@
     <!-- le menu de navigation -->
     <nav>
         <ul class="barre-de-menu">
+            <li><img src="./images/logo_galerapagos.png" alt="logo galerapagos"></li>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="etude.html">Présentation de l'étude</a></li>
             <li><a href="deroulement.html">Déroulement du projet</a></li>
@@ -21,47 +22,53 @@
         </ul>
     </nav>
 
-    <h1>Livrables</h1>
-    <p>
-        Texte explicatif livrables.ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de
-        amicitia.
-        Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
-        (sic
-        enim est
-        habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
-        loqui ipsum
-        putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
-        Laelius,
-        cuius tota
-        disputatio est de amicitia, quam legens te ipse cognosces.
-    </p>
-    <div>
-        <h2>Cahier des charges</h2>
+    <div id="contenu">
+        <h1>Livrables</h1>
         <p>
-            On met le cahier des charges ici
+            Texte explicatif livrables.ed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus
+            scripsi de
+            amicitia.
+            Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens
+            (sic
+            enim est
+            habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium
+            loqui ipsum
+            putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet
+            Laelius,
+            cuius tota
+            disputatio est de amicitia, quam legens te ipse cognosces.
         </p>
+        <div>
+            <h2>Cahier des charges</h2>
+            <p>
+                On met le cahier des charges ici
+            </p>
+        </div>
+
+        <div>
+            <h2>Protocole expérimental</h2>
+            <p>
+                On met le Protocole exp ici
+            </p>
+        </div>
+
+        <div>
+            <h2>Diaporama des règles du jeu avec son interface</h2>
+            <p>
+                On met le diapo ici
+            </p>
+        </div>
+
+        <div>
+            <h2>Règles IA</h2>
+            <p>
+                On met les différents graph qu'on a fait
+            </p>
+        </div>
+
     </div>
 
-    <div>
-        <h2>Protocole expérimental</h2>
-        <p>
-            On met le Protocole exp ici
-        </p>
-    </div>
 
-    <div>
-        <h2>Diaporama des règles du jeu avec son interface</h2>
-        <p>
-            On met le diapo ici
-        </p>
-    </div>
-
-    <div>
-        <h2>Règles IA</h2>
-        <p>
-            On met les différents graph qu'on a fait
-        </p>
-    </div>
 
     <footer>
         <div class="footerContainer">
